--- a/prettier-demo/package.json
+++ b/prettier-demo/package.json
@@ -22,8 +22,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "consloe.log(777777777)",
-      "pre-push": "YOUR_SCRIPT"
+      "pre-commit": "",
+      "pre-push": ""
     }
   }
 }
