--- a/webpack-project/package.json
+++ b/webpack-project/package.json
@@ -11,7 +11,8 @@
     "build": "webpack --config webpack.prod.js",
     "builddev": "webpack --config webpack.dev.js",
     "watch": "webpack --watch",
-    "dev": "webpack-dev-server --config webpack.dev.js --open"
+    "dev": "webpack-dev-server --config webpack.dev.js",
+    "build:ssr": "webpack --config webpack.ssr.js"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -51,6 +52,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "lib-flexible": "^0.3.2"
   }
 }
