--- a/build-webpack/package.json
+++ b/build-webpack/package.json
@@ -1,15 +1,56 @@
 {
-  "name": "build-webpack",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack-merge": "^4.2.2"
-  }
+    "name": "build-webpack",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "eslint": "eslint ./lib --fix",
+        "build": "webpack --config webpack.prod.js",    
+        "builddev": "webpack --config webpack.dev.js",
+        "watch": "webpack --watch",
+        "dev": "webpack-dev-server --config webpack.dev.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-eslint": "^10.1.0",
+        "eslint": "^7.6.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-plugin-import": "^2.22.0",
+        "mocha": "^8.1.1",
+        "rimraf": "^3.0.2"
+    },
+    "dependencies": {
+        "@babel/core": "^7.9.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.9.5",
+        "@babel/preset-react": "^7.9.4",
+        "autoprefixer": "^9.7.6",
+        "babel-loader": "8.0.0-beta.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.5.2",
+        "cssnano": "^4.1.10",
+        "eslint-loader": "^4.0.2",
+        "file-loader": "^6.0.0",
+        "friendly-errors-webpack-plugin": "^1.7.0",
+        "glob": "^7.1.6",
+        "html-webpack-externals-plugin": "^3.8.0",
+        "html-webpack-plugin": "^4.3.0",
+        "less": "^3.11.1",
+        "less-loader": "^5.0.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "postcss-loader": "^3.0.0",
+        "px2rem-loader": "^0.1.9",
+        "raw-loader": "0.5.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "style-loader": "^1.1.4",
+        "url-loader": "^4.1.0",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-merge": "^4.2.2"
+    }
 }
