--- a/webpack-project/.babelrc
+++ b/webpack-project/.babelrc
@@ -1,11 +1,10 @@
 {
     "presets": [
-        ["@babel/preset-env", {
-            "modules": false
-        }], // es6 相关
-        "@babel/preset-react" // react 相关
-    ],
-    "plugins": [
-        "@babel/plugin-syntax-dynamic-import"
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry"
+        }
+      ]
     ]
-}
+  }
