--- a/webpack-project/package.json
+++ b/webpack-project/package.json
@@ -15,13 +15,7 @@
     "build:ssr": "webpack --config webpack.ssr.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "autoprefixer": "^9.7.6",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "8.0.0-beta.0",
+    "autoprefixer": "^9.8.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
@@ -40,19 +34,28 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-import": "^14.0.0",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
     "raw-loader": "0.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "style-loader": "^1.1.4",
+    "style-loader": "^1.3.0",
     "url-loader": "^4.1.0",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-preset-env": "^1.7.0",
+    "element-ui": "^2.14.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "lib-flexible": "^0.3.2"
+    "lib-flexible": "^0.3.2",
+    "vue": "^2.6.12"
   }
 }
