--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Koa",
+  "name": "Node.js",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.13.1"
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "connect": "^3.7.0",
+    "cookie-session": "^1.4.0"
   }
 }
