--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-{}
+{
+  "name": "helloworld",
+  "version": "1.0.0",
+  "main": "Node.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JamesRenChen/Hello-World.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JamesRenChen/Hello-World/issues"
+  },
+  "homepage": "https://github.com/JamesRenChen/Hello-World#readme",
+  "description": ""
+}
